@@ -21840,6 +21840,17 @@ inline void UpdateVisibilityOf_helper(std::set<uint64>& s64, Creature* target, s
     v.insert(target);
 }
 
+inline void UpdateVisibilityOf_helper(std::set<uint64>& s64, GameObject* target, std::set<Unit*>& /*v*/)
+{
+    // From old trinity revision
+    //if (!target->IsTransport() && !(target->GetGOInfo()->type == GAMEOBJECT_TYPE_DESTRUCTIBLE_BUILDING))
+    // s64.insert(target->GetGUID());
+
+    // Don't update only GAMEOBJECT_TYPE_TRANSPORT (or all transports and destructible buildings?)
+    if (!(target->GetGOInfo()->type == GAMEOBJECT_TYPE_TRANSPORT))
+        s64.insert(target->GetGUID());
+}
+
 template<>
 inline void UpdateVisibilityOf_helper(std::set<uint64>& s64, Player* target, std::set<Unit*>& v)
 {
